2008-12-08  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbcsqlite3.n: Added a man page for the driver.
	
2008-12-07  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:
	* aclocal.m4:
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* license.terms:
	* pkgIndex.tcl.in:
	* tclconfig/*:
	* tests/all.tcl: 
	* tests/tdbcsqlite3.test:
	Added infrastructure needed to make tdbc::sqlite3
	a TEA-compliant module.  Advanced revision number to 1.0b1 in
	preparation for release.
	
2008-06-11  Kevin B. Kenny  <kennykb@acm.org>
	
	* library/tdbcsqlite3.tcl: Split [$resultset nextrow] into two 
	primitive methods: [$resultset nextlist] and [$resultset nextdict]. 

2008-05-13  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcsqlite3.test: Added cleanup for the test for
	failing to open a database, in case we actually open it successfully.
	
2008-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* ChangeLog: Added a change log.
	* library/tdbcsqlite3.tcl: Added the 'columns' and 'tables'
	methods for schema introspection.
	* tests/tdbcsqlite3.test: Removed some superfluous debugging print.
	Renumbered tdbcsqlite3-9.9. Corrected the tests for column
	types to match SQLite's view of the world.